syntax = "proto3";

option csharp_namespace = "AppsServer.Protos";

import "google/api/annotations.proto";

package product;

service Product {
	rpc GetProductById(ProductRequest) returns (ProductResponse){
		option (google.api.http) = {
			get: "/v1/get_product_by_id/{id}"
		};
	};

	rpc GetAllProduct(ProductAllRequest) returns (ProductAllResponse){
		option (google.api.http) = {
			get: "/v1/get_all_product",
			body: "*"
		};
	};

	rpc CreateProduct(ProductAddRequest) returns (ProductResponse){
		option (google.api.http) = {
			post: "/v1/create_product",
			body: "*"
		};
	};

	rpc UpdateProduct(ProductEditRequest) returns (ProductResponse){
		option (google.api.http) = { 
			put: "/v1/update_product",
			body: "*"
		};
	};

	rpc DeleteProduct(ProductRequest) returns (ProducMessageResponse){
		option (google.api.http) = { 
			delete: "/v1/delete_product/{id}"
		}; 
	};
}

message ProductRequest {
	string id = 1;
}

message ProductAllRequest {
	int32 page = 1;
	int32 page_limit = 2;
}

message ProductAddRequest {
	string code = 1;
	string name = 2;
}

message ProductEditRequest {
	string id = 1;
	string code = 2;
	string name = 3;
}

message ProductResponse {
	string id = 1;
	string code = 2;
	string name = 3;
}

message ProductAllResponse {
	repeated ProductResponse products = 1;
	int32 page = 2;
	int32 page_limit = 3;
	int32 page_total = 4;
}

message ProducMessageResponse {
	string message = 1;
}


